# kusai

./: .clang-format  .clang-tidy  .copywrite.hcl  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPack.cmake  Dependencies.cmake  Install.cmake  README.md  Settings.cmake  Taskfile.yaml  go.mod  pyproject.toml  vcpkg.json
.woodpecker/: release-native.yaml  release-python.yaml  release.yaml
CMake/: Dependencies.cmake  Helpers.cmake  Install.cmake  Settings.cmake  kusai-config.cmake.in
app/: CMakeLists.txt  main.cpp
app/commands/: AbstractCommand.cpp  AbstractCommand.hpp  RootCommand.cpp  RootCommand.hpp  RunCommand.cpp  RunCommand.hpp  ServeCommand.cpp  ServeCommand.hpp  TrainCommand.cpp  TrainCommand.hpp
app/helpers/: model.hpp
app/textchain_train/: CMakeLists.txt  main.cpp
app/textchain_util/: CMakeLists.txt
bind/: CMakeLists.txt
bind/python/: CMakeLists.txt  bindings.hpp  module.cpp
bind/python/bindings/: graph.cpp  markov.cpp  serializable.cpp  textchain.cpp  tokenizer.cpp
bind/python/trampolines/: PyAbstractGraph.cpp  PyAbstractGraph.hpp  PyAbstractMarkov.cpp  PyAbstractMarkov.hpp  PyAbstractSerializable.cpp  PyAbstractSerializable.hpp  PyAbstractTokenizer.cpp  PyAbstractTokenizer.hpp
cmake/: Dependencies.cmake  Install.cmake  Settings.cmake
include/kusai/common/: AbstractSerializable.hpp  Serializable.hpp
include/kusai/graph/: AbstractGraph.hpp  Edge.hpp  MemoryGraph.hpp  Node.hpp
include/kusai/markov/: AbstractMarkov.hpp  BackoffMarkov.hpp  Markov.hpp  NGramMarkov.hpp  SimpleMarkov.hpp
include/kusai/serializable/: AbstractSerializable.hpp
include/kusai/textchain/: TextChain.hpp
include/kusai/tokenizer/: AbstractTokenizer.hpp  SimpleTokenizer.hpp
proto/: CMakeLists.txt  graph.hpp  graph.proto  idgen.proto  markov.hpp  markov.proto  service.proto  textchain.proto  tokenizer.proto
proto/helpers/: graph.hpp
src/: CMakeLists.txt
src/common/: AbstractSerializable.cpp  CMakeLists.txt  Serializable.cpp
src/graph/: AbstractGraph.cpp  AbstractGraph.hpp  CMakeLists.txt  Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  MemoryGraph.cpp  MemoryGraph.hpp  Node.cpp  Node.hpp  RedisGraph.cpp  RedisGraph.hpp
src/idgen/: CMakeLists.txt  IdGenerator.cpp  IdGenerator.hpp
src/markov/: AbstractMarkov.cpp  AbstractMarkov.hpp  BackoffMarkov.cpp  BackoffMarkov.hpp  CMakeLists.txt  Markov.cpp  Markov.hpp  NGramMarkov.cpp  NGramMarkov.hpp  SimpleMarkov.cpp
src/serializable/: AbstractSerializable.cpp  CMakeLists.txt
src/service/: CMakeLists.txt  TextChainService.cpp  TextChainService.hpp
src/textchain/: CMakeLists.txt  TextChain.cpp  TextChain.hpp
src/tokenizer/: AbstractTokenizer.cpp  AbstractTokenizer.hpp  CMakeLists.txt  SimpleTokenizer.cpp  SimpleTokenizer.hpp
src/util/: CMakeLists.txt  hash.hpp
tools/: tools.go
tools/vcpkg/: gen-overlay.sh
