[build-system]
requires = ["scikit-build-core>=0.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "kusai"
version = "0.11.1"
requires-python = ">=3.12"
description = "Python bindings for Kusai"
authors = [{ name = "Kasefuchs", email = "kasefuchs@protonmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
dependencies = []

[tool.scikit-build]
cmake.args = [
  "-DKUSAI_BUILD_PYTHON=ON",
  "-DBUILD_SHARED_LIBS=OFF"
]
wheel.packages = []
